# tars_simulation

./: README.md
omni_circle/: CMakeLists.txt  package.xml
omni_circle/launch/: f35_world.launch
omni_circle/src/: movement_roverPub.cpp  rover_publisher.cpp
omni_circle/worlds/: f35_world.world
open_base/: CMakeLists.txt  package.xml
open_base/launch/: gazebo_controller.launch  parameter.launch  parameter_backup.launch
open_base/xacro/: rim.urdf.xacro
